# escape-room

./: CMakeLists.txt  README.md  bitset.h  err.c  err.h  initializer.c  manager.c  multiset.h  player.c  propositions.h  propositions_list.h  rooms.h  rozwiazanie.txt  shared_storage.h  test.c
